--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/ICON_ASRAM_1.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -15,7 +15,7 @@
   <link rel="preload" href="/AsramWebsite-FE/assets/research/asramresearchbanner.png" as="image">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>asram-fe</title>
+  <title>asram</title>
 </head>
 
 <body>
